--- a/scss/_demo.scss
+++ b/scss/_demo.scss
@@ -16,6 +16,10 @@ $border-color:darken($bg-color, 10%);
 $pane-bg-color:lighten($bg-color, 5%);
 $log-bg-color: #FFFFEE;
 
+$green-border-color:mix(#0F0, $border-color);
+$blue-border-color:mix(#00F, $border-color);
+$red-border-color:mix(#F00, $border-color);
+$orange-border-color:mix(#F80, $border-color);
 $font-size:12px;
 $font-color:#444;
 
@@ -44,6 +48,10 @@ body{
 
 h1{
   font-size:2em;
+  font-weight:bold;
+}
+h2{
+  font-size:1.5em;
   font-weight:bold;
 }
 small{
@@ -87,12 +95,21 @@ button{
   }
 }
 
-#grid, #menu{
-  margin-bottom:$margin-lg;
-  border: 1px solid $border-color;
-  background-color: $pane-bg-color;
-  padding: $padding-lg;
+#content{
+  display: flex;
+  margin:$margin-lg 0px;
 }
+#menu{
+  width:250px;
+  //float:left;
+  margin-right: $margin-lg;
+  button{
+    display: block;
+    width:100%;
+    margin-bottom: $margin-sm;
+  }
+}
+
 #position{
   padding:$padding-lg;
   color:$font-color;
@@ -105,13 +122,32 @@ button{
   float:left;
 }
 
+#mapReGenerate{
+  padding:$padding-lg;
+  background-color: lighten($green-border-color, 5%);
+  border-color:$green-border-color;
+  font-weight:bold;
+  &:hover{
+    background-color:lighten($green-border-color, 15%);
+  }
+  .active{
+    background-color:lighten($green-border-color, 10%);
+  }
+}
+
+.panel{
+  border: 1px solid $border-color;
+  background-color: $pane-bg-color;
+  padding: $padding-lg;
+}
+
 .tooltip {
 	display:none;
 	position:absolute;
 	border:1px solid #333;
 	background-color:#161616;
-	border-radius:5px;
-	padding:10px;
+	border-radius:$radius-sm;
+	padding:$padding-sm $padding-lg;
 	color:#fff;
 	font-size:0.8em;
   font-family:monospace;
@@ -120,5 +156,33 @@ button{
   }
   strong{
     text-decoration: underline;
+  }
+}
+
+.accordion{
+  margin-bottom: $padding-sm;
+}
+// Accordion
+.menu-button {
+	cursor: pointer;
+  margin-top: 0px;
+  margin-bottom:0px;
+  margin-left: -$padding-lg;
+  margin-right: -$padding-lg;
+  padding: $padding-sm $padding-lg;
+  background-color: $border-color;
+  font-weight:bold;
+  font-size:1.2em;
+  &:hover{
+    background-color: lighten($border-color, 10%);
+  }
+}
+
+.menu-content {
+	//background-color: #EFEFEF;
+	display: none;
+	padding-bottom:$padding-lg;
+  &:last-child{
+    padding-bottom:0px;
   }
 }
